# heimdall-mcp-server

./: .dockerignore  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CLA.md  CLAUDE.md  CONTRIBUTING.md  README.md  architecture-highlevel.md  architecture-technical-specification.md  auto_cleanup_legacy.py  cleanup_legacy_heimdall.py  legacy_heimdall_backup.json  lightweight_monitor.py  memory-cognitive-model-conception.md  migrate_production.py  migration_results.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup_claude_code_mcp.sh  setup_mcp_for_claude_code.sh  shared-docs-plan.md  start_enhanced_heimdall.py  test-hook-docker.txt  test-hook-file.txt  test-hook-rebuild.txt  test-incremental-2.txt  test-incremental-fix.txt  test_chained.txt  test_enhanced_mcp_demo.py  test_enhanced_queries.py  test_enhanced_system.py  test_hook.txt  test_migration.py  test_migration_success.py  test_simple_query.py
.claude/commands/: code-review.md  debug.md  execute-plan.md  implementation-plan.md  review-achievement.md  test-plan.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pr-checks.yml  release.yml
cognitive_memory/: factory.py  main.py
cognitive_memory/core/: __init__.py  cognitive_system.py  config.py  enhanced_memory.py  interfaces.py  logging_setup.py  memory.py
cognitive_memory/encoding/: cognitive_encoder.py  dimensions.py  onnx_provider.py  sentence_bert.py
cognitive_memory/git_analysis/: __init__.py  commit.py  commit_loader.py  data_structures.py  history_miner.py  pattern_detector.py  pattern_embedder.py  security.py
cognitive_memory/loaders/: __init__.py  git_loader.py  markdown_loader.py
cognitive_memory/migration/: enhanced_migration_tools.py
cognitive_memory/monitoring/: __init__.py  file_monitor.py  file_sync.py  loader_registry.py
cognitive_memory/retrieval/: basic_activation.py  bridge_discovery.py  contextual_retrieval.py  enhanced_query_engine.py  similarity_search.py  temporal_semantic_coordinator.py
cognitive_memory/storage/: __init__.py  dual_memory.py  enhanced_storage.py  qdrant_storage.py  sqlite_persistence.py
data/models/: model_config.json
docker/: Dockerfile  docker-compose.template.yml  entrypoint.sh  healthcheck.sh  setup-deps.sh
docs/: architecture-technical-specification.md  docker-implementation-plan.md  docker-size-analysis-report.md  git-hook-setup.md  markdown-parsing-architecture.md  mcp-server-architecture.md  memory-removal.md  monitoring-architecture.md  setup-automation-design.md  shared-qdrant-architecture.md
docs/arch-docs/: architecture-highlevel.md  architecture-technical-specification.md  docker-architecture.md  git-integration-architecture.md  markdown-parsing-architecture.md  memory-types-guide.md  (+4 more)
heimdall/: cli.py  display_utils.py  interactive_shell.py  mcp_server.py  operations.py
interfaces/: cli.py  mcp_server.py  mcp_utils.py
mcp/: enhanced_mcp_server.py
memory_system/: __init__.py  cli.py  health_checker.py  interactive_shell.py  monitoring_service.py  service_health.py  service_manager.py
scripts/: analyze_container_size.sh  claude_mcp_wrapper.sh  cleanup_memory.sh  convert_model_to_onnx.py  git-hook-installer.sh  git_hook_installer.py  list_memory_projects.sh  load_project_content.sh  monitor_memory_usage.sh  post-commit-hook.sh  post_commit_hook.py  release.py  setup_project_memory.sh  start_memory.sh  stop_memory.sh
tests/: conftest.py  factory_utils.py  test_enhanced_architecture.py  test_mcp_server.py  test_utils.py
(+95 files in other folders)
